<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|bottom"

    android:background="#261D3A"
    android:padding="16dp"
    tools:context=".StopwatchActivity">

    <TextView
        android:id="@+id/Introduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="80dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/introduction"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/timePassedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/since_the_start_of_the_month_this_much_time_has_passed"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="48sp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/moneyEarnedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="100dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/during_this_time_you_have_earned_0_00_eur"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textSize="48sp" />


    <Button
        android:id="@+id/setWageButton"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:onClick="onClickSetWage"
        android:rotationY="0"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/set_monthly_wage"
        android:layout_marginBottom="15dp"
        app:rippleColor="#673AB7" />

    <EditText
        android:id="@+id/wageInputField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:visibility="gone"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/wageTextView"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:text="@string/monthly_wage_0_00_euros" />

</LinearLayout>